# ChangeLog for sys-devel/ct-ng
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/ct-ng/ChangeLog,v 1.13 2011/05/30 23:13:37 blueness Exp $

*ct-ng-1.11.3 (30 May 2011)

  30 May 2011; Anthony G. Basile <blueness@gentoo.org> -ct-ng-1.11.1.ebuild,
  -ct-ng-1.11.2.ebuild, +ct-ng-1.11.3.ebuild:
  Version bump and removed deprecated

*ct-ng-1.11.2 (19 May 2011)

  19 May 2011; Anthony G. Basile <blueness@gentoo.org> +ct-ng-1.11.2.ebuild:
  Version bump

  03 May 2011; Anthony G. Basile <blueness@gentoo.org> -ct-ng-1.8.0.ebuild,
  -ct-ng-1.8.1.ebuild, -ct-ng-1.9.0.ebuild, -ct-ng-1.9.1.ebuild,
  -ct-ng-1.10.0.ebuild:
  Removed deprecated versions

*ct-ng-1.11.1 (03 May 2011)

  03 May 2011; Anthony G. Basile <blueness@gentoo.org> +ct-ng-1.11.1.ebuild:
  Version bump

  30 Apr 2011; Anthony G. Basile <blueness@gentoo.org> ct-ng-1.8.0.ebuild,
  ct-ng-1.8.1.ebuild, ct-ng-1.8.2.ebuild, ct-ng-1.9.0.ebuild,
  ct-ng-1.9.1.ebuild, ct-ng-1.9.2.ebuild, ct-ng-1.10.0.ebuild,
  ct-ng-1.10.1.ebuild:
  Updated DESCRIPTION to include the full name for easier searching

*ct-ng-1.10.1 (23 Apr 2011)
*ct-ng-1.10.0 (23 Apr 2011)

  23 Apr 2011; Anthony G. Basile <blueness@gentoo.org> +ct-ng-1.10.0.ebuild,
  +ct-ng-1.10.1.ebuild:
  Version bumps to 1.10.0 and 1.10.1

*ct-ng-1.9.2 (01 Feb 2011)

  01 Feb 2011; Anthony G. Basile <blueness@gentoo.org> +ct-ng-1.9.2.ebuild:
  Version bump to 1.9.2

*ct-ng-1.9.1 (30 Dec 2010)

  30 Dec 2010; Anthony G. Basile <blueness@gentoo.org> +ct-ng-1.9.1.ebuild:
  Version bump to 1.9.1

*ct-ng-1.9.0 (04 Nov 2010)

  04 Nov 2010; Anthony G. Basile <blueness@gentoo.org> +ct-ng-1.9.0.ebuild:
  Version bump to 1.9.0

*ct-ng-1.8.2 (05 Oct 2010)
*ct-ng-1.8.1 (05 Oct 2010)

  05 Oct 2010; Anthony G. Basile <blueness@gentoo.org> -ct-ng-1.7.1.ebuild,
  +ct-ng-1.8.1.ebuild, +ct-ng-1.8.2.ebuild, -files/fix-man-path.patch:
  Version bumps and remove obsolete

*ct-ng-1.8.0 (09 Aug 2010)
