@@ -1,6 +1,11 @@
 # ChangeLog for sys-devel/ct-ng
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/ct-ng/ChangeLog,v 1.13 2011/05/30 23:13:37 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/ct-ng/ChangeLog,v 1.14 2011/08/01 02:05:10 blueness Exp $
+
+*ct-ng-1.12.0 (01 Aug 2011)
+
+  01 Aug 2011; Anthony G. Basile <blueness@gentoo.org> +ct-ng-1.12.0.ebuild:
+  Version bump
 
 *ct-ng-1.11.3 (30 May 2011)
 
